feat feature follows and create post
