# internal/dto/follows.dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type AddFollowed struct {
+	FollowedId int `json:"followed_id" binding:"required"`
+}
