# internal/model/follows.model.go
@@ -1,0 +1,6 @@
+package model
+
+type Follows struct {
+	FollowerId int `db:"follower_id"`
+	FollowedId int `db:"followed_id"`
+}
